<resources>
    <string name="app_name">SoptAndroidSeminar</string>
    <string name="title">GitHub</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="write_name">이름을 입력해주세요.</string>
    <string name="id">깃허브 아이디</string>
    <string name="write_id">깃허브 아이디를 입력해주세요.</string>
    <string name="pw">비밀번호</string>
    <string name="write_pw">비밀번호를 입력해주세요.</string>
    <string name="success_sign_up">회원가입 완료</string>
    <string name="my_name">이강민</string>
    <string name="my_id">leekangmin</string>
    <string name="introduce">안녕하세요 이강민입니다~~~</string>
    <string name="follower_list">팔로워 목록</string>
    <string name="repository_list">레포지토리 목록</string>
    <string name="repository_url_title">GitHub Repository URL</string>
    <string name="repository_url">URL</string>
    <string name="image_camera">사진을 첨부해주세요</string>
    <string name="image_camera_import">첨부하기</string>
    <string name="onboard1">SOPTHub에 오신걸\n 환영합니다!</string>
    <string name="onboard2">SOPTHub에서 즐거운 시간\n 보내시길 바랍니다!</string>
    <string name="onboard3">SOPTHub를\n 시작해볼까요?</string>
    <string name="onboard_next">다음으로</string>
    <string name="onboard_start">시작하기</string>
    <string name="setting">환경설정</string>
    <string name="setting_login">자동로그인 해제</string>
    <string name="auto_login">자동 로그인</string>
</resources>